css: fix clipping of clipboard tooltip

--- a/content/media/css/luffy.code.less
+++ b/content/media/css/luffy.code.less
@@ -229,7 +229,6 @@ kbd {
         &::after {
             position: absolute;
             top: 0;
-            bottom: 0;
             right: 0;
             display: none;
             font-size: 0.75em;
